--- a/session0/index.html
+++ b/session0/index.html
@@ -875,8 +875,11 @@
                 Delve into the practical implementations of Generative AI across diverse applications, showcasing how
                 these technologies are transforming industries.
               </p>
-              <a href="/genai-2/" target="_blank" rel="noopener" class="playground-button">
+              <!-- <a href="/genai-2/" target="_blank" rel="noopener" class="playground-button">
                 Explore Playground
+              </a> -->
+              <a href="/genai-2/" target="_blank" rel="noopener" class="playground-button">
+                Coming Soon
               </a>
             </div>
           </article>
@@ -897,7 +900,7 @@
                 prompts through proper testing methodologies.
               </p>
               <a href="/genai-3/" target="_blank" rel="noopener" class="playground-button">
-                Explore Playground
+                Coming Soon
               </a>
             </div>
           </article>
@@ -917,7 +920,7 @@
                 Explores the ethical frameworks, security practices, and governance structures necessary to develop and deploy AI systems that are fair, transparent, secure, and accountable.
               </p>
               <a href="/genai-4/" target="_blank" rel="noopener" class="playground-button">
-                Explore Playground
+                Coming Soon
               </a>
             </div>
           </article>
@@ -937,7 +940,7 @@
                 Explore the revolutionary footwear experience through AI-powered shoe design, personalized product descriptions, visual concept generation, and interactive customer engagement.
               </p>
               <a href="/genai-5/" target="_blank" rel="noopener" class="playground-button">
-                Explore Playground
+                Coming Soon
               </a>
             </div>
           </article>
