--- a/session0/index.html
+++ b/session0/index.html
@@ -900,7 +900,7 @@
                 prompts through proper testing methodologies.
               </p>
               <a href="/genai-3/" target="_blank" rel="noopener" class="playground-button">
-                Coming Soon
+                Explore Playground
               </a>
             </div>
           </article>
@@ -1576,3 +1576,4 @@
 </body>
 
 </html>
+
