--- a/session0/index.html
+++ b/session0/index.html
@@ -920,7 +920,7 @@
                 Explores the ethical frameworks, security practices, and governance structures necessary to develop and deploy AI systems that are fair, transparent, secure, and accountable.
               </p>
               <a href="/genai-4/" target="_blank" rel="noopener" class="playground-button">
-                Coming Soon
+                Explore Playground
               </a>
             </div>
           </article>
@@ -940,7 +940,7 @@
                 Explore the revolutionary footwear experience through AI-powered shoe design, personalized product descriptions, visual concept generation, and interactive customer engagement.
               </p>
               <a href="/genai-5/" target="_blank" rel="noopener" class="playground-button">
-                Coming Soon
+                Explore Playground
               </a>
             </div>
           </article>
@@ -1576,4 +1576,5 @@
 </body>
 
 </html>
+
 
